--- a/thesis/ctuthesis-master/references.bib
+++ b/thesis/ctuthesis-master/references.bib
@@ -302,3 +302,11 @@
 	pages={37},
 	year={1989}
 }
+
+@article{syswerda1991schedule,
+	title={Schedule optimization using genetic algorithms},
+	author={Syswerda, Gilbert},
+	journal={Handbook of genetic algorithms},
+	year={1991},
+	publisher={Van Nostrand Reinhold}
+}
