--- a/thesis/ctuthesis-master/references.bib
+++ b/thesis/ctuthesis-master/references.bib
@@ -310,3 +310,24 @@
 	year={1991},
 	publisher={Van Nostrand Reinhold}
 }
+
+@book{marte2018handbook,
+	title={Handbook of heuristics},
+	author={Marte, Rafael and others},
+	year={2018},
+	publisher={Springer,}
+}
+\\
+@article{EGLESE1994231,
+	title = {Routeing winter gritting vehicles},
+	journal = {Discrete Applied Mathematics},
+	volume = {48},
+	number = {3},
+	pages = {231-244},
+	year = {1994},
+	issn = {0166-218X},
+	doi = {https://doi.org/10.1016/0166-218X(92)00003-5},
+	url = {https://www.sciencedirect.com/science/article/pii/0166218X92000035},
+	author = {R.W. Eglese},
+
+}
